Fix text overflow

--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ details li[class] {
 	list-style: none;
 	margin: .3em 0;
 	font-size: 90%;
-	white-space: pre;
+	white-space: pre-line;
 }
 
 	details li[class] small {
